# Utilities

./: .gitignore  CMakeLists.txt  README.md  clany_macros.h  cmdparser.hpp  eigen.hpp  factory.hpp  file_operation.hpp  sample.cpp  timer.hpp
cmake/: ClanyUtilities.cmake  Utilities.cmake
include/clany/: algorithm.hpp  byte_array.hpp  clany_defs.h  clany_macros.h  cmdparser.hpp  dyn_bitset.hpp  eigen.hpp  factory.hpp  file_operation.hpp  point_types.hpp  timer.hpp  traits.hpp  tstring.h  utilities.h
include/cls/: algorithm.hpp  byte_array.hpp  cls_defs.h  cmdparser.hpp  dyn_bitset.hpp  error.hpp  factory.hpp  file_operation.hpp  file_sys.hpp  point_types.hpp  string.hpp  timer.hpp  traits.hpp  utilities.h
test/: test.cpp
